[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[project]
name = "pylocked"
description = "pyLocked provides utility classes to `[R]Lock` resources."
version = "0.0.0-dev"
authors = [{ name = "Eyal Halpern Shalev", email = "eyalsh@gmail.com" }]
requires-python = ">=3.10"

[project.optional-dependencies]
asyncio = ['pylocked-asyncio']
threading = ['pylocked-threading']
dev = ['mypy~=0.990', 'pylocked[test]']
test = ['pytest~=7.2.0', 'pytest-asyncio~=0.20.1', 'flake8~=5.0.4']

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]
testpaths=[
    "tests",
]

[tool.mypy]
files = [
    "pylocked",
    "tests",
]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[source]
root_patterns =[
    '/pylocked-threading'
]
