[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[project]
name = "pylocked-example"
version = "0.0.0-dev"
authors = [{ name = "Eyal Halpern Shalev", email = "eyalsh@gmail.com" }]
dependencies = [
  'pylocked'
]


[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true
