[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[project]
name = "pylocked-asyncio"
description = "pyLocked provides utility classes to `asyncio.Lock` resources."
version = "0.0.0-dev"
authors = [{ name = "Eyal Halpern Shalev", email = "eyalsh@gmail.com" }]
requires-python = ">=3.10"
